# aili-liteos

./: .gitmodules  CMakeLists.txt  Makefile  README.md  flash_prog_cfg.ini  kernel.txt  proj.conf  test.sh
.cache/clangd/index/: WIFI_Connection.c.99A83A4581E7A643.idx  _Applogo001_92x92.c.2DB42DBBA1B05708.idx  _Applogo002_92x92.c.BA8AB3E6F1E0B44D.idx  _Applogo005_92x92.c.E8611DBCE9C73E90.idx  _Applogo013_92x92.c.122A1F9E183862C4.idx  _Applogo018_92x92.c.8CAE20856419D425.idx  _Applogo026_92x92.c.E463B692EBDBB41D.idx  _bluetooth_connected_alpha_32x32.c.FD1AD4AF35A00F91.idx  _hour_needle_white_alpha_70x8.c.D6F93516A0AFC2A2.idx  _main_page_480x480.c.5C4D18BEA2D4E383.idx  _main_page_alpha_204x204.c.DB361AAA255A2F7C.idx  _min_needle_white_alpha_105x8.c.5BA8285ECB7A7652.idx  _second_needle_2_alpha_130x5.c.55C8F8A111D65A0F.idx  _wifi_alpha_32x32.c.845067C73377295C.idx  board.c.FD8733223BDD0848.idx  board.h.A062880B3A1F0A8A.idx  csr.h.006496999C8FD617.idx  custom.c.D0B2E1698D20E5AA.idx  custom.h.3DA694E690510CCE.idx  events_init.c.BC0B2CB013894FC5.idx  events_init.h.72AFECB72BB2BBFD.idx  fscanf_s.c.803F9F02E7C31FED.idx  fw_header.c.C5AA409C0B2DF751.idx  fw_header.h.FC83A16C917DE0BC.idx  fwscanf_s.c.6231A957F7CAF02E.idx  gets_s.c.2C632B106143D296.idx  (+111 more)
appentry/: main.c
board/: bl616_flash.ld  board.c
board/config/: bl_factory_params_IoTKitA_auto.dts
config/: lv_conf.h  riscv_hal.h  target_config.h
liteos_m/: CMakeLists.txt
liteos_m/arch/: CMakeLists.txt
liteos_m/components/: CMakeLists.txt
liteos_m/kernel/: CMakeLists.txt
liteos_m/utils/: CMakeLists.txt
(+31 files in other folders)
