# 添加所有组件子目录
#add_subdirectory(backtrace)
add_subdirectory(bounds_checking_function)
#add_subdirectory(cppsupport)
#add_subdirectory(cpup)
#add_subdirectory(debugtools)
#add_subdirectory(dynlink)
#add_subdirectory(exchook)
#add_subdirectory(fs)
#add_subdirectory(iar_tls)
#add_subdirectory(lmk)
#add_subdirectory(lms)
#add_subdirectory(net)
#add_subdirectory(power)
#add_subdirectory(security)
#add_subdirectory(shell)
#add_subdirectory(signal)
#add_subdirectory(trace)